Fixed too much padding causing text overflow

--- a/AlternionWiki/shared/navbar.css
+++ b/AlternionWiki/shared/navbar.css
@@ -60,7 +60,6 @@
 	display: inline;
 	color: white;
 	text-align: center;
-	padding: 14px 16px;
 	text-decoration: none;
 	border-right: 2px solid #000000;
 	transition-duration: 0.2s;
@@ -72,7 +71,6 @@
 	display: inline;
 	color: white;
 	text-align: center;
-	padding: 14px 16px;
 	text-decoration: none;
 	border-right: 2px solid #000000;
 	transition-duration: 0.2s;
