--- a/DiscordBots/shared/navbar.css
+++ b/DiscordBots/shared/navbar.css
@@ -31,10 +31,10 @@
 	display: inline;
 	color: white;
 	text-align: center;
-	padding: 14px 16px;
 	text-decoration: none;
 	border-right: 2px solid #000000;
 	transition-duration: 0.2s;
+	height:55px;
 }
 
 .navListR {
@@ -42,7 +42,6 @@
 	display: inline;
 	color: white;
 	text-align: center;
-	padding: 14px 16px;
 	text-decoration: none;
 	border-right: 2px solid #000000;
 	transition-duration: 0.2s;
